--- a/src/app/layout/sidenav/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/layout/sidenav/sidenav-menu/sidenav-menu.component.html
@@ -1,6 +1,6 @@
 <ul class="nav" myAccordionNav myAppendSubmenuIcon mySlimScroll myHighlightActiveItems>
   <!-- <li class="nav-header"><span>Navigation</span></li> -->
-  <li><a mat-button [routerLink]="['/app/dashboard']"><i class="nav-icon material-icons">home</i><span class="nav-text">Dashboard</span></a></li>
+  <li><a mat-button [routerLink]="['/app/dashboard']"><i class="nav-icon material-icons">home</i><span class="nav-text">Thống kê</span></a></li>
   <li><a mat-button href="javascript:;" myToggleQuickview="customizer"><i class="nav-icon material-icons">settings</i><span class="nav-text">Customizer</span></a></li>
   <li>
     <a mat-button href="#/app/ui"><i class="nav-icon material-icons">bubble_chart</i><span class="nav-text">UI Kit</span></a>
@@ -25,7 +25,7 @@
     </ul>
   </li>
   <li>
-    <a mat-button href="#/app/form"><i class="nav-icon material-icons">format_color_text</i><span class="nav-text">Forms</span></a>
+    <a mat-button href="#/app/form"><i class="nav-icon material-icons">format_color_text</i><span class="nav-text">Theo dõi thu - chi</span></a>
     <ul>
       <!-- <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/input']"><span>Input</span></a></li>
       <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/checkbox']"><span>Checkbox</span></a></li>
@@ -34,8 +34,8 @@
       <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/select']"><span>Select</span></a></li>
       <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/slide-toggle']"><span>Slide Toggle</span></a></li>
       <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/slider']"><span>Slider</span></a></li> -->
-      <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/components']"><span>Components</span><span class="badge badge-pill badge-info">10</span></a></li>
-      <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/layouts']"><span>Form Layouts</span></a></li>
+      <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/components']"><span>Thu - chi quán</span><span class="badge badge-pill badge-info">10</span></a></li>
+      <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/layouts']"><span>Thu - chi nhà</span></a></li>
       <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/form/validation']"><span>Form Validation</span></a></li>
     </ul>
   </li>
