--- a/src/app/forms/components.component.html
+++ b/src/app/forms/components.component.html
@@ -1,5 +1,7 @@
 <section class="container-fluid with-maxwidth chapter">
-  <my-form-input></my-form-input>
+  <my-form-datepicker></my-form-datepicker>
+  
+  <!-- <my-form-input></my-form-input>
   <my-form-slide-toggle></my-form-slide-toggle>
   <my-form-slider></my-form-slider>
   <my-form-checkbox></my-form-checkbox>
@@ -8,5 +10,5 @@
   <my-form-radio-button></my-form-radio-button>
   <my-form-autocomplete></my-form-autocomplete>
   <my-form-datepicker></my-form-datepicker>
-  <my-form-chips></my-form-chips>
+  <my-form-chips></my-form-chips> -->
 </section>
