--- a/src/app/layout/sidenav/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/layout/sidenav/sidenav-menu/sidenav-menu.component.html
@@ -40,7 +40,7 @@
     </ul>
   </li>
   <li>
-    <a mat-button href="#/app/table"><i class="nav-icon material-icons">list</i><span class="nav-text">Tables</span></a>
+    <a mat-button href="#/app/table"><i class="nav-icon material-icons">list</i><span class="nav-text">Quản lý nguyên liệu</span></a>
     <ul>
       <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/table/static']"><span>Static Tables</span></a></li>
       <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/table/responsive']"><span>Responsive Tables</span></a></li>
@@ -95,10 +95,10 @@
     </ul>
   </li>
   <li>
-    <a mat-button href="#/app/ecommerce"><i class="nav-icon material-icons">shopping_cart</i><span class="nav-text">eCommerce</span></a>
+    <a mat-button href="#/app/ecommerce"><i class="nav-icon material-icons">shopping_cart</i><span class="nav-text">Sản phẩm</span></a>
     <ul>
-      <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/ecommerce/products']"><span>Products</span></a></li>
-      <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/ecommerce/horizontal-products']"><span>Products (Horizontal)</span></a></li>
+      <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/ecommerce/products']"><span>Cà phê</span></a></li>
+      <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/ecommerce/horizontal-products']"><span>Sinh tố - Nước ép</span></a></li>
       <li><a mat-button class="md-button prepend-icon" [routerLink]="['/app/ecommerce/invoice']"><span>Invoice</span></a></li>
     </ul>
   </li>
@@ -123,6 +123,6 @@
   </li>
   <li class="nav-divider"></li>
   <li class="li-small"><a mat-button [routerLink]="['/app/form/components']"><i class="nav-icon nav-dot material-icons color-info">fiber_manual_record</i><span class="nav-text">Form Components</span></a></li>
-  <li class="li-small"><a mat-button [routerLink]="['/app/ui/components']"><i class="nav-icon nav-dot material-icons color-success">fiber_manual_record</i><span class="nav-text">UI Components</span></a></li>
+  <li class="li-small"><a mat-button [routerLink]="['/app/ui/components']"><i class="nav-icon nav-dot material-icons color-success">fiber_manual_record</i><span class="nav-text">Quán lý orders</span></a></li>
   <li class="li-small"><a mat-button href="http://iarouse.com/dist-angular-material/landing/" target="_blank"><i class="nav-icon nav-dot material-icons color-danger">fiber_manual_record</i><span class="nav-text">Material Landing</span></a></li>
 </ul>
